@@ -2,6 +2,8 @@ version 1.8.5, in progress
 - Fix: avoid duplicating the return line when saving
   packaged functions that were originally old-style
 - More refinements for function-package editor
+- Handle backslash-escaped quotes in literal definition of
+  string variables
   
 8/28/2009 version 1.8.4
 - Fix breakage in GUI interface for calling user-defined
